fixed spacing for saved price

--- a/style.css
+++ b/style.css
@@ -3536,6 +3536,7 @@ button[name='update_cart'] {
 
 .saved-sale{
     color: #333 !important;
+    white-space: nowrap !important;
 }
 
 .woocommerce-cart .woocommerce-shipping-destination{
